basic calculator shape finished

--- a/styles.css
+++ b/styles.css
@@ -15,35 +15,32 @@ body {
 #calc-wrapper {
     width: 640px;
     margin: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background-color: lightblue;
     border: 3px black solid;
     border-radius: 15px;
 }
 
+#display-wrapper {
+    border: 1px red solid;
+    width: inherit;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 #display {
-    width: 80%;
+    width: inherit;
     margin: 25px;
-    align-self: center;
     height: 75px;
     background-color: white;;
     border: 2px black solid;
     border-radius: 5px;
     text-align: right;
     font-family: 'Times New Roman', Times, serif;
-}
-
-#col-display {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-#col-buttons {
-    width: inherit;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
 }
 
 #display .results {
@@ -56,4 +53,41 @@ body {
     margin: 10px;
     color:darkslateblue;
     font-size: 1.25em;
+}
+
+#buttons-wrapper {
+    border: 1px red solid;
+    width: inherit;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.col {
+    width: inherit;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.row {
+    height: 100px;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+.button {
+    width: 75px;
+    height: 75px;
+    margin: 10px;
+    font-family:'Times New Roman', Times, serif;
+    font-size: 1.5em;
+    text-transform: capitalize;
+    border: 1px black solid;
+    border-radius: 10px;
+}
+
+.large {
+    width: 170px;
 }
